cmake_minimum_required(VERSION 3.13)
project(VINS_Fusion)

set(CMAKE_CXX_STANDARD 14)

include_directories(camera_models/include)
include_directories(camera_models/include/camodocal)
include_directories(camera_models/include/camodocal/calib)
include_directories(camera_models/include/camodocal/camera_models)
include_directories(camera_models/include/camodocal/chessboard)
include_directories(camera_models/include/camodocal/gpl)
include_directories(camera_models/include/camodocal/sparse_graph)
include_directories(global_fusion/src)
include_directories(global_fusion/ThirdParty/GeographicLib/include)
include_directories(dense_map/src)
include_directories(dense_map/src/ThirdParty)
include_directories(dense_map/src/ThirdParty/DBoW)
include_directories(dense_map/src/ThirdParty/DUtils)
include_directories(dense_map/src/ThirdParty/DVision)
include_directories(dense_map/src/utility)
include_directories(vins_estimator/src/estimator)
include_directories(vins_estimator/src/factor)
include_directories(vins_estimator/src/featureTracker)
include_directories(vins_estimator/src/initial)
include_directories(vins_estimator/src/utility)

add_executable(VINS_Fusion
        camera_models/camera_calib_example/calibrationdata/left-0000.png
        camera_models/camera_calib_example/calibrationdata/left-0001.png
        camera_models/camera_calib_example/calibrationdata/left-0002.png
        camera_models/camera_calib_example/calibrationdata/left-0003.png
        camera_models/camera_calib_example/calibrationdata/left-0004.png
        camera_models/camera_calib_example/calibrationdata/left-0005.png
        camera_models/camera_calib_example/calibrationdata/left-0006.png
        camera_models/camera_calib_example/calibrationdata/left-0007.png
        camera_models/camera_calib_example/calibrationdata/left-0008.png
        camera_models/camera_calib_example/calibrationdata/left-0009.png
        camera_models/camera_calib_example/calibrationdata/left-0010.png
        camera_models/camera_calib_example/calibrationdata/left-0011.png
        camera_models/camera_calib_example/calibrationdata/left-0012.png
        camera_models/camera_calib_example/calibrationdata/left-0013.png
        camera_models/camera_calib_example/calibrationdata/left-0014.png
        camera_models/camera_calib_example/calibrationdata/left-0015.png
        camera_models/camera_calib_example/calibrationdata/left-0016.png
        camera_models/camera_calib_example/calibrationdata/left-0017.png
        camera_models/camera_calib_example/calibrationdata/left-0018.png
        camera_models/camera_calib_example/calibrationdata/left-0019.png
        camera_models/camera_calib_example/calibrationdata/left-0020.png
        camera_models/camera_calib_example/calibrationdata/left-0021.png
        camera_models/camera_calib_example/calibrationdata/left-0022.png
        camera_models/camera_calib_example/calibrationdata/left-0023.png
        camera_models/camera_calib_example/calibrationdata/left-0024.png
        camera_models/camera_calib_example/calibrationdata/left-0025.png
        camera_models/camera_calib_example/calibrationdata/left-0026.png
        camera_models/camera_calib_example/calibrationdata/left-0027.png
        camera_models/camera_calib_example/calibrationdata/left-0028.png
        camera_models/camera_calib_example/calibrationdata/left-0029.png
        camera_models/camera_calib_example/calibrationdata/left-0030.png
        camera_models/camera_calib_example/calibrationdata/left-0031.png
        camera_models/camera_calib_example/calibrationdata/left-0032.png
        camera_models/camera_calib_example/calibrationdata/left-0033.png
        camera_models/camera_calib_example/calibrationdata/left-0034.png
        camera_models/camera_calib_example/calibrationdata/left-0035.png
        camera_models/camera_calib_example/calibrationdata/left-0036.png
        camera_models/camera_calib_example/calibrationdata/left-0037.png
        camera_models/camera_calib_example/calibrationdata/left-0038.png
        camera_models/camera_calib_example/calibrationdata/left-0039.png
        camera_models/camera_calib_example/calibrationdata/left-0040.png
        camera_models/camera_calib_example/calibrationdata/left-0041.png
        camera_models/camera_calib_example/calibrationdata/left-0042.png
        camera_models/camera_calib_example/calibrationdata/left-0043.png
        camera_models/camera_calib_example/calibrationdata/left-0044.png
        camera_models/camera_calib_example/calibrationdata/left-0045.png
        camera_models/camera_calib_example/calibrationdata/left-0046.png
        camera_models/camera_calib_example/calibrationdata/left-0047.png
        camera_models/camera_calib_example/calibrationdata/left-0048.png
        camera_models/camera_calib_example/calibrationdata/left-0049.png
        camera_models/camera_calib_example/calibrationdata/left-0050.png
        camera_models/camera_calib_example/calibrationdata/left-0051.png
        camera_models/camera_calib_example/calibrationdata/left-0052.png
        camera_models/camera_calib_example/calibrationdata/left-0053.png
        camera_models/camera_calib_example/calibrationdata/left-0054.png
        camera_models/camera_calib_example/calibrationdata/left-0055.png
        camera_models/camera_calib_example/calibrationdata/left-0056.png
        camera_models/camera_calib_example/calibrationdata/left-0057.png
        camera_models/camera_calib_example/calibrationdata/left-0058.png
        camera_models/camera_calib_example/calibrationdata/left-0059.png
        camera_models/camera_calib_example/calibrationdata/left-0060.png
        camera_models/camera_calib_example/calibrationdata/left-0061.png
        camera_models/camera_calib_example/calibrationdata/left-0062.png
        camera_models/camera_calib_example/calibrationdata/left-0063.png
        camera_models/camera_calib_example/calibrationdata/left-0064.png
        camera_models/camera_calib_example/calibrationdata/left-0065.png
        camera_models/camera_calib_example/calibrationdata/left-0066.png
        camera_models/camera_calib_example/calibrationdata/left-0067.png
        camera_models/camera_calib_example/calibrationdata/left-0068.png
        camera_models/camera_calib_example/calibrationdata/left-0069.png
        camera_models/camera_calib_example/calibrationdata/left-0070.png
        camera_models/camera_calib_example/calibrationdata/left-0071.png
        camera_models/camera_calib_example/calibrationdata/left-0072.png
        camera_models/camera_calib_example/calibrationdata/left-0073.png
        camera_models/camera_calib_example/calibrationdata/left-0074.png
        camera_models/camera_calib_example/calibrationdata/left-0075.png
        camera_models/camera_calib_example/calibrationdata/left-0076.png
        camera_models/camera_calib_example/calibrationdata/left-0077.png
        camera_models/camera_calib_example/calibrationdata/left-0078.png
        camera_models/camera_calib_example/calibrationdata/left-0079.png
        camera_models/camera_calib_example/calibrationdata/left-0080.png
        camera_models/camera_calib_example/calibrationdata/left-0081.png
        camera_models/camera_calib_example/calibrationdata/left-0082.png
        camera_models/camera_calib_example/calibrationdata/left-0083.png
        camera_models/camera_calib_example/calibrationdata/left-0084.png
        camera_models/camera_calib_example/readme.txt
        camera_models/cmake/FindEigen.cmake
        camera_models/include/camodocal/calib/CameraCalibration.h
        camera_models/include/camodocal/camera_models/Camera.h
        camera_models/include/camodocal/camera_models/CameraFactory.h
        camera_models/include/camodocal/camera_models/CataCamera.h
        camera_models/include/camodocal/camera_models/CostFunctionFactory.h
        camera_models/include/camodocal/camera_models/EquidistantCamera.h
        camera_models/include/camodocal/camera_models/PinholeCamera.h
        camera_models/include/camodocal/camera_models/PinholeFullCamera.h
        camera_models/include/camodocal/camera_models/ScaramuzzaCamera.h
        camera_models/include/camodocal/chessboard/Chessboard.h
        camera_models/include/camodocal/chessboard/ChessboardCorner.h
        camera_models/include/camodocal/chessboard/ChessboardQuad.h
        camera_models/include/camodocal/chessboard/Spline.h
        camera_models/include/camodocal/gpl/EigenQuaternionParameterization.h
        camera_models/include/camodocal/gpl/EigenUtils.h
        camera_models/include/camodocal/gpl/gpl.h
        camera_models/include/camodocal/sparse_graph/Transform.h
        camera_models/src/calib/CameraCalibration.cc
        camera_models/src/camera_models/Camera.cc
        camera_models/src/camera_models/CameraFactory.cc
        camera_models/src/camera_models/CataCamera.cc
        camera_models/src/camera_models/CostFunctionFactory.cc
        camera_models/src/camera_models/EquidistantCamera.cc
        camera_models/src/camera_models/PinholeCamera.cc
        camera_models/src/camera_models/PinholeFullCamera.cc
        camera_models/src/camera_models/ScaramuzzaCamera.cc
        camera_models/src/chessboard/Chessboard.cc
        camera_models/src/gpl/EigenQuaternionParameterization.cc
        camera_models/src/gpl/gpl.cc
        camera_models/src/sparse_graph/Transform.cc
        camera_models/src/intrinsic_calib.cc
        camera_models/CMakeLists.txt
        camera_models/package.xml
        camera_models/readme.md
        config/A3_ptgrey/a3_ptgrey_mono_imu_config.yaml
        config/A3_ptgrey/a3_ptgrey_stereo_config.yaml
        config/A3_ptgrey/a3_ptgrey_stereo_imu_config.yaml
        config/A3_ptgrey/left.yaml
        config/A3_ptgrey/right.yaml
        config/euroc/cam0_mei.yaml
        config/euroc/cam0_pinhole.yaml
        config/euroc/cam1_mei.yaml
        config/euroc/cam1_pinhole.yaml
        config/euroc/euroc_mono_imu_config.yaml
        config/euroc/euroc_stereo_config.yaml
        config/euroc/euroc_stereo_imu_config.yaml
        config/kitti_odom/cam00-02.yaml
        config/kitti_odom/cam03.yaml
        config/kitti_odom/cam04-12.yaml
        config/kitti_odom/cam13-21.yaml
        config/kitti_odom/kitti_config00-02.yaml
        config/kitti_odom/kitti_config03.yaml
        config/kitti_odom/kitti_config04-12.yaml
        config/kitti_odom/kitti_config13-21.yaml
        config/kitti_raw/cam_09_30.yaml
        config/kitti_raw/cam_10_03.yaml
        config/kitti_raw/kitti_09_30_config.yaml
        config/kitti_raw/kitti_10_03_config.yaml
        config/mynteye/left_mei.yaml
        config/mynteye/mynteye_mono_imu_config.yaml
        config/mynteye/mynteye_stereo_config.yaml
        config/mynteye/mynteye_stereo_imu_config.yaml
        config/mynteye/right_mei.yaml
        config/realsense/cam0_pinhole.yaml
        config/realsense/cam1_pinhole.yaml
        config/realsense/realsense_d435i_config.yaml
        config/realsense/realsense_stereo_imu_config.yaml
        config/simulation/cam0_mei.yaml
        config/simulation/cam1_mei.yaml
        config/simulation/simulation_config.yaml
        config/vi_car/cam0_mei.yaml
        config/vi_car/cam0_pinhole.yaml
        config/vi_car/cam1_mei.yaml
        config/vi_car/cam1_pinhole.yaml
        config/vi_car/vi_car.yaml
        config/extrinsic_parameter_example.pdf
        config/fisheye_mask.jpg
        config/fisheye_mask_752x480.jpg
        config/vins_rviz_config.rviz
        global_fusion/models/car.dae
        global_fusion/models/hummingbird.mesh
        global_fusion/src/Factors.h
        global_fusion/src/globalOpt.cpp
        global_fusion/src/globalOpt.h
        global_fusion/src/globalOptNode.cpp
        global_fusion/src/tic_toc.h
        global_fusion/ThirdParty/GeographicLib/include/Config.h
        global_fusion/ThirdParty/GeographicLib/include/Constants.hpp
        global_fusion/ThirdParty/GeographicLib/include/Geocentric.hpp
        global_fusion/ThirdParty/GeographicLib/include/LocalCartesian.hpp
        global_fusion/ThirdParty/GeographicLib/include/Math.hpp
        global_fusion/ThirdParty/GeographicLib/src/Geocentric.cpp
        global_fusion/ThirdParty/GeographicLib/src/LocalCartesian.cpp
        global_fusion/ThirdParty/GeographicLib/src/Math.cpp
        global_fusion/CMakeLists.txt
        global_fusion/package.xml
        dense_map/cmake/FindEigen.cmake
        dense_map/src/ThirdParty/DBoW/BowVector.cpp
        dense_map/src/ThirdParty/DBoW/BowVector.h
        dense_map/src/ThirdParty/DBoW/DBoW2.h
        dense_map/src/ThirdParty/DBoW/FBrief.cpp
        dense_map/src/ThirdParty/DBoW/FBrief.h
        dense_map/src/ThirdParty/DBoW/FClass.h
        dense_map/src/ThirdParty/DBoW/FeatureVector.cpp
        dense_map/src/ThirdParty/DBoW/FeatureVector.h
        dense_map/src/ThirdParty/DBoW/QueryResults.cpp
        dense_map/src/ThirdParty/DBoW/QueryResults.h
        dense_map/src/ThirdParty/DBoW/ScoringObject.cpp
        dense_map/src/ThirdParty/DBoW/ScoringObject.h
        dense_map/src/ThirdParty/DBoW/TemplatedDatabase.h
        dense_map/src/ThirdParty/DBoW/TemplatedVocabulary.h
        dense_map/src/ThirdParty/DUtils/DException.h
        dense_map/src/ThirdParty/DUtils/DUtils.h
        dense_map/src/ThirdParty/DUtils/Random.cpp
        dense_map/src/ThirdParty/DUtils/Random.h
        dense_map/src/ThirdParty/DUtils/Timestamp.cpp
        dense_map/src/ThirdParty/DUtils/Timestamp.h
        dense_map/src/ThirdParty/DVision/BRIEF.cpp
        dense_map/src/ThirdParty/DVision/BRIEF.h
        dense_map/src/ThirdParty/DVision/DVision.h
        dense_map/src/ThirdParty/VocabularyBinary.cpp
        dense_map/src/ThirdParty/VocabularyBinary.hpp
        dense_map/src/utility/CameraPoseVisualization.cpp
        dense_map/src/utility/CameraPoseVisualization.h
        dense_map/src/utility/tic_toc.h
        dense_map/src/utility/utility.cpp
        dense_map/src/utility/utility.h
        dense_map/src/keyframe.cpp
        dense_map/src/keyframe.h
        dense_map/src/parameters.h
        dense_map/src/pose_graph.cpp
        dense_map/src/pose_graph.h
        dense_map/src/pose_graph_node.cpp
        dense_map/CMakeLists.txt
        dense_map/package.xml
        support_files/image/car.png
        support_files/image/car_gif.gif
        support_files/image/euroc.gif
        support_files/image/kitti.gif
        support_files/image/kitti.png
        support_files/image/kitti_rank.png
        support_files/image/vins.png
        support_files/image/vins_black.png
        support_files/image/vins_logo.png
        "support_files/paper/VINS-Mono: A Robust and Versatile Monocular\nVisual-Inertial State Estimator.pdf"
        support_files/brief_k10L6.bin
        support_files/brief_pattern.yml
        support_files/paper_bib.txt
        vins_estimator/cmake/FindEigen.cmake
        vins_estimator/launch/vins_rviz.launch
        vins_estimator/src/estimator/estimator.cpp
        vins_estimator/src/estimator/estimator.h
        vins_estimator/src/estimator/feature_manager.cpp
        vins_estimator/src/estimator/feature_manager.h
        vins_estimator/src/estimator/parameters.cpp
        vins_estimator/src/estimator/parameters.h
        vins_estimator/src/factor/imu_factor.h
        vins_estimator/src/factor/initial_bias_factor.h
        vins_estimator/src/factor/initial_pose_factor.h
        vins_estimator/src/factor/integration_base.h
        vins_estimator/src/factor/marginalization_factor.cpp
        vins_estimator/src/factor/marginalization_factor.h
        vins_estimator/src/factor/pose_local_parameterization.cpp
        vins_estimator/src/factor/pose_local_parameterization.h
        vins_estimator/src/factor/projection_factor.cpp
        vins_estimator/src/factor/projection_factor.h
        vins_estimator/src/factor/projectionOneFrameTwoCamFactor.cpp
        vins_estimator/src/factor/projectionOneFrameTwoCamFactor.h
        vins_estimator/src/factor/projectionTwoFrameOneCamFactor.cpp
        vins_estimator/src/factor/projectionTwoFrameOneCamFactor.h
        vins_estimator/src/factor/projectionTwoFrameTwoCamFactor.cpp
        vins_estimator/src/factor/projectionTwoFrameTwoCamFactor.h
        vins_estimator/src/featureTracker/feature_tracker.cpp
        vins_estimator/src/featureTracker/feature_tracker.h
        vins_estimator/src/initial/initial_aligment.cpp
        vins_estimator/src/initial/initial_alignment.h
        vins_estimator/src/initial/initial_ex_rotation.cpp
        vins_estimator/src/initial/initial_ex_rotation.h
        vins_estimator/src/initial/initial_sfm.cpp
        vins_estimator/src/initial/initial_sfm.h
        vins_estimator/src/initial/solve_5pts.cpp
        vins_estimator/src/initial/solve_5pts.h
        vins_estimator/src/utility/CameraPoseVisualization.cpp
        vins_estimator/src/utility/CameraPoseVisualization.h
        vins_estimator/src/utility/tic_toc.h
        vins_estimator/src/utility/utility.cpp
        vins_estimator/src/utility/utility.h
        vins_estimator/src/utility/visualization.cpp
        vins_estimator/src/utility/visualization.h
        vins_estimator/src/KITTIGPSTest.cpp
        vins_estimator/src/KITTIOdomTest.cpp
        vins_estimator/src/rosNodeTest.cpp
        vins_estimator/CMakeLists.txt
        vins_estimator/package.xml
        LICENCE
        README.md)
